--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,12 +1,4 @@
-<ion-header>
-  <ion-navbar>
-    <button ion-button menuToggle>
-      <ion-icon name="menu"></ion-icon>
-    </button>
-    <ion-title>Accueil</ion-title>
-  </ion-navbar>
-</ion-header>
 
-<ion-content padding>
-  <h3>Bienvennue</h3>
+<ion-content padding id="fond">
+  <button ion-button color="danger" (click)="go()">CLIQUEZ ICI !</button>
 </ion-content>
