--- a/src/pages/plat/plat.html
+++ b/src/pages/plat/plat.html
@@ -7,9 +7,15 @@
         </ion-navbar>
       </ion-header>
       <ion-content padding>
+            <ion-list>
+                    <ion-item *ngFor="let pl of plat">
+                      {{pl.title}}
+                    </ion-item>
+            </ion-list>
+
             <ion-grid>
                 <ion-row>
-                    <ion-col col-4>
+                    <ion-col class="plat-col" col-4>
                         <button (click)="ajoutPlat()">
                             <ion-card>
                                 <img src="../../assets/imgs/wooper.png"/>
@@ -19,48 +25,56 @@
                             </ion-card>
                         </button>
                     </ion-col>
-                    <ion-col col-4>
-                        <ion-card>
-                            <img src="../../assets/imgs/wooper.png"/>
-                            <ion-card-content padding>
-                                <ion-card-title>DOUBLE WHOPPER® CHEESE <strong>9.80 €</strong></ion-card-title>
-                            </ion-card-content>
-                        </ion-card>
-                    </ion-col>
-                    <ion-col col-4>
-                        <ion-card>
-                            <img src="../../assets/imgs/wooper.png"/>
-                            <ion-card-content padding>
-                                <ion-card-title>DOUBLE WHOPPER® CHEESE <strong>9.80 €</strong></ion-card-title>
-                            </ion-card-content>
-                        </ion-card>
-                    </ion-col>
-                </ion-row>
-                <ion-row>
-                    <ion-col col-4>
+                    <ion-col class="plat-col" col-4>
+                        <button (click)="ajoutPlat()">
                             <ion-card>
                                 <img src="../../assets/imgs/wooper.png"/>
                                 <ion-card-content padding>
                                     <ion-card-title>DOUBLE WHOPPER® CHEESE <strong>9.80 €</strong></ion-card-title>
                                 </ion-card-content>
                             </ion-card>
+                        </button>
                     </ion-col>
-                    <ion-col col-4>
-                        <ion-card>
-                            <img src="../../assets/imgs/wooper.png"/>
-                            <ion-card-content padding>
-                                <ion-card-title>DOUBLE WHOPPER® CHEESE <strong>9.80 €</strong></ion-card-title>
-                            </ion-card-content>
-                        </ion-card>
+                    <ion-col class="plat-col" col-4>
+                        <button (click)="ajoutPlat()">
+                            <ion-card>
+                                <img src="../../assets/imgs/wooper.png"/>
+                                <ion-card-content padding>
+                                    <ion-card-title>DOUBLE WHOPPER® CHEESE <strong>9.80 €</strong></ion-card-title>
+                                </ion-card-content>
+                            </ion-card>
+                        </button>
                     </ion-col>
-                    <ion-col col-4>
-                        <ion-card>
-                            <img src="../../assets/imgs/wooper.png"/>
-                            <ion-card-content padding>
-                                <ion-card-title>DOUBLE WHOPPER® CHEESE <strong>9.80 €</strong></ion-card-title>
-                            </ion-card-content>
-                        </ion-card>
-                    </ion-col>
-                </ion-row>
+                    <ion-col class="plat-col" col-4>
+                            <button (click)="ajoutPlat()">
+                                <ion-card>
+                                    <img src="../../assets/imgs/wooper.png"/>
+                                    <ion-card-content padding>
+                                        <ion-card-title>DOUBLE WHOPPER® CHEESE <strong>9.80 €</strong></ion-card-title>
+                                    </ion-card-content>
+                                </ion-card>
+                            </button>
+                        </ion-col>
+                        <ion-col class="plat-col" col-4>
+                            <button (click)="ajoutPlat()">
+                                <ion-card>
+                                    <img src="../../assets/imgs/wooper.png"/>
+                                    <ion-card-content padding>
+                                        <ion-card-title>DOUBLE WHOPPER® CHEESE <strong>9.80 €</strong></ion-card-title>
+                                    </ion-card-content>
+                                </ion-card>
+                            </button>
+                        </ion-col>
+                        <ion-col class="plat-col" col-4>
+                            <button (click)="ajoutPlat()">
+                                <ion-card>
+                                    <img src="../../assets/imgs/wooper.png"/>
+                                    <ion-card-content padding>
+                                        <ion-card-title>DOUBLE WHOPPER® CHEESE <strong>9.80 €</strong></ion-card-title>
+                                    </ion-card-content>
+                                </ion-card>
+                            </button>
+                        </ion-col>
+                    </ion-row>
             </ion-grid>
       </ion-content>
