--- a/src/pages/plat/plat.html
+++ b/src/pages/plat/plat.html
@@ -8,8 +8,8 @@
       </ion-header>
       <ion-content padding>
             <ion-list>
-                    <ion-item *ngFor="let pl of plat">
-                      {{pl.title}}
+                    <ion-item *ngFor="let plat of plats">
+                      {{plat.title}}
                     </ion-item>
             </ion-list>
 
