--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,4 +1,4 @@
 
 <ion-content padding id="fond">
-  <button ion-button color="danger" (click)="go()">CLIQUEZ ICI !</button>
+  <button ion-button color="warning" (click)="go()">Découvrez notre carte</button>
 </ion-content>
