--- a/src/pages/inscription/inscription.html
+++ b/src/pages/inscription/inscription.html
@@ -29,7 +29,7 @@
     </ion-list>
     
     <div padding>
-      <button ion-button >Inscription</button>
+      <button ion-button color="warning" >Inscription</button>
     </div>
 
 </ion-content>
