--- a/src/pages/plat/plat.html
+++ b/src/pages/plat/plat.html
@@ -7,46 +7,26 @@
         </ion-navbar>
       </ion-header>
       <ion-content padding>
-            <ion-list>
+            <!--<ion-list>
                     <ion-item *ngFor="let plat of plats">
                       {{plat.title}}
                     </ion-item>
-            </ion-list>
+            </ion-list>-->
 
             <ion-grid>
                 <ion-row>
-                    <ion-col class="plat-col" col-4>
+                    <ion-col *ngFor="let plat of plats" class="plat-col" col-4>
                         <button (click)="ajoutPlat()">
                             <ion-card>
                                 <img src="../../assets/imgs/wooper.png"/>
                                 <ion-card-content padding>
-                                    <ion-card-title>DOUBLE WHOPPER® CHEESE <strong>9.80 €</strong></ion-card-title>
+                                    <ion-card-title>{{plat.title}} <strong>9.80 €</strong></ion-card-title>
                                 </ion-card-content>
                             </ion-card>
                         </button>
                     </ion-col>
-                    <ion-col class="plat-col" col-4>
+                    <!--<ion-col class="plat-col" col-4>
                         <button (click)="ajoutPlat()">
-                            <ion-card>
-                                <img src="../../assets/imgs/wooper.png"/>
-                                <ion-card-content padding>
-                                    <ion-card-title>DOUBLE WHOPPER® CHEESE <strong>9.80 €</strong></ion-card-title>
-                                </ion-card-content>
-                            </ion-card>
-                        </button>
-                    </ion-col>
-                    <ion-col class="plat-col" col-4>
-                        <button (click)="ajoutPlat()">
-                            <ion-card>
-                                <img src="../../assets/imgs/wooper.png"/>
-                                <ion-card-content padding>
-                                    <ion-card-title>DOUBLE WHOPPER® CHEESE <strong>9.80 €</strong></ion-card-title>
-                                </ion-card-content>
-                            </ion-card>
-                        </button>
-                    </ion-col>
-                    <ion-col class="plat-col" col-4>
-                            <button (click)="ajoutPlat()">
                                 <ion-card>
                                     <img src="../../assets/imgs/wooper.png"/>
                                     <ion-card-content padding>
@@ -54,27 +34,7 @@
                                     </ion-card-content>
                                 </ion-card>
                             </button>
-                        </ion-col>
-                        <ion-col class="plat-col" col-4>
-                            <button (click)="ajoutPlat()">
-                                <ion-card>
-                                    <img src="../../assets/imgs/wooper.png"/>
-                                    <ion-card-content padding>
-                                        <ion-card-title>DOUBLE WHOPPER® CHEESE <strong>9.80 €</strong></ion-card-title>
-                                    </ion-card-content>
-                                </ion-card>
-                            </button>
-                        </ion-col>
-                        <ion-col class="plat-col" col-4>
-                            <button (click)="ajoutPlat()">
-                                <ion-card>
-                                    <img src="../../assets/imgs/wooper.png"/>
-                                    <ion-card-content padding>
-                                        <ion-card-title>DOUBLE WHOPPER® CHEESE <strong>9.80 €</strong></ion-card-title>
-                                    </ion-card-content>
-                                </ion-card>
-                            </button>
-                        </ion-col>
+                        </ion-col>-->
                     </ion-row>
             </ion-grid>
       </ion-content>
