--- a/src/pages/commande/commande.html
+++ b/src/pages/commande/commande.html
@@ -18,14 +18,20 @@
           </ion-card>
         </ion-col>
         <ion-col col-3>
+          
           <ion-card >
-              <ion-card-header>
-                Première commande ?
+              <ion-card-header >
+                <br>
+                <ion-title>Première commande ?</ion-title>
               </ion-card-header>
+              <br>
               <ion-card-content>
                 <!-- Add card content here! -->
                 <p>Vous n'avez jamais commander avec nos bornes de commandes ?<br> Je vous invites alors à passer par ici !</p>
-                <button ion-button color="danger" (click)="inscription()"> C'est parti !</button>
+              </ion-card-content>
+              <br>
+              <ion-card-content>
+                <button ion-button color="danger" (click)="inscription()">Inscription</button>
               </ion-card-content>
             
             </ion-card>
