--- a/src/pages/inscription/inscription.html
+++ b/src/pages/inscription/inscription.html
@@ -9,7 +9,7 @@
   
   <ion-content padding>
 
-<ion-list>
+<ion-list col-md-8 >
     
       <ion-item>
         <ion-label>Nom</ion-label>
@@ -29,7 +29,7 @@
     </ion-list>
     
     <div padding>
-      <button ion-button >Inscription</button>
+      <button ion-button (click)="valider()">Inscription</button>
     </div>
 
 </ion-content>
