--- a/src/pages/inscription/inscription.html
+++ b/src/pages/inscription/inscription.html
@@ -14,20 +14,14 @@
       <ion-list col-md-8 >
         <ion-item>
           <ion-label>Nom</ion-label>
-          <ion-input [(ngModel)]="insc.nom" name="nom" type="text"></ion-input>
+          <ion-input [(ngModel)]="insc.name" name="name" type="text"></ion-input>
         </ion-item>
         
         <ion-item>
-              <ion-label>Email</ion-label>
-              <ion-input [(ngModel)]="insc.email" name="email" type="email"></ion-input>
-          </ion-item>
-
-        <ion-item>
-          <ion-label>Mot de passe</ion-label>
-          <ion-input [(ngModel)]="insc.password" name="password" type="password"></ion-input>
+            <ion-label>Email</ion-label>
+            <ion-input [(ngModel)]="insc.email" name="email" type="email"></ion-input>
         </ion-item>
       </ion-list>
-
       <div padding>
         <button ion-button color="warning" type="submit" >Inscription</button>
       </div>
