--- a/src/pages/paiement/paiement.html
+++ b/src/pages/paiement/paiement.html
@@ -7,5 +7,18 @@
     </ion-navbar>
 </ion-header>
 <ion-content padding>
-
+    <h1>Votre Commande</h1>
+    <ion-list>
+        <ion-item-sliding *ngFor="let produit of panier">
+            <ion-item>
+                <ion-avatar item-start>
+                    <img src="http://smartorder.jeremielbaz.fr{{produit.image}}" width="50px" width="50px">
+                </ion-avatar>
+                <h2>{{produit.titre}} {{produit.prix}}€</h2>
+            </ion-item>
+        </ion-item-sliding>
+    </ion-list>
+    <p></p>
+    <button ion-button block (click)="payer()">Payer</button>
+    {{ uid }}
 </ion-content>
