--- a/src/pages/paiement/paiement.html
+++ b/src/pages/paiement/paiement.html
@@ -18,6 +18,6 @@
             </ion-item>
         </ion-item-sliding>
     </ion-list>
-    <p></p>
+    <p>Total Panier: {{totalPanier}} €</p>
     <button ion-button block (click)="payer()">Payer</button>
 </ion-content>
